<resources>
    <string name="app_name">FastEats</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="intro_para">Your Food \nDelivered \nFast</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="lets_get_started">Let\'s get started!</string>
    <string name="sign_in_to_account">Sign in to an existing account.</string>
    <string name="create_account">Create new account.</string>
    <string name="email_address">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">First Name</string>
    <string name="show_password">Show Password</string>
    <string name="not_signed_up">Not <b>signed up?</b></string>
    <string name="already_a_member">Already <b>signed up?</b></string>
    <string name="create_account_button">Create account</string>
</resources>