<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#739072"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:padding="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="186dp"
                android:src="@drawable/fasteats_no_bg"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lets_get_started"
                android:textStyle="normal"
                android:textAlignment="center"
                android:fontFamily="sans-serif-medium"
                android:textSize="30sp"
                android:textColor="#DBE7C9"
                android:letterSpacing="0.05"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textStyle="normal"
                android:textAlignment="center"
                android:fontFamily="sans-serif-light"
                android:textSize="16sp"
                android:textColor="#DBE7C9"
                android:layout_marginTop="8dp"
                android:letterSpacing="0.03"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_field"
                android:hint="@string/name_hint"
                android:inputType="textPersonName"
                android:autofillHints="name"
                android:letterSpacing="0.05"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColorHint="#88DBE7C9" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_field"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:letterSpacing="0.05"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColorHint="#88DBE7C9"
                android:autofillHints="email Address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_field"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:letterSpacing="0.05"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textColorHint="#88DBE7C9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:importantForAccessibility="no"
                    android:soundEffectsEnabled="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.05"
                    android:text="@string/show_password"
                    android:textColor="#DBE7C9"
                    android:textSize="14sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/primary_button"
                    android:fontFamily="sans-serif-medium"
                    android:letterSpacing="0.04"
                    android:padding="10dp"
                    android:text="@string/create_account_button"
                    android:textAlignment="center"
                    android:textColor="#DBE7C9"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/login_redirect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:letterSpacing="0.05"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/not_signed_up"
                    android:textColor="#DBE7C9"
                    android:textSize="16sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>